<resources>
    <string name="app_name">Biz Finder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_logo">Application Logo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google Plus</string>
    <string name="copyright" translatable="false">\@Ecstacia Dreams</string>
    <string name="profile_picture">User Profile Picture</string>
</resources>
